--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <div class="container">
 
-        <div class="benar-text py-5 my-5 text-center text-white">
+        <div class="benar-text py-5 text-center text-white">
         
           <div class="row justify-content-center">
 
